--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
-            <version>6.0.3</version>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.0.1</version>
         </dependency>
 
         <!--        TEST         -->
