--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,3 +1,18 @@
 spring:
   datasource.driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
-  flyway.enabled: true
+
+  flyway:
+    enabled: true
+    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+
+  jpa:
+    hibernate.ddl-auto: create
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    properties.hibernate:
+      format_sql: true
+      dialect :  org.hibernate.dialect.MySQL5Dialect
+
+cache.genre.time-to-live: 14400000
