--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,6 +1,7 @@
 spring:
   datasource.driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
-
+  datasource:
+    url: jdbc:postgresql://localhost:5432/
   flyway:
     enabled: true
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
@@ -14,5 +15,3 @@ spring:
     properties.hibernate:
       format_sql: true
       dialect :  org.hibernate.dialect.MySQL5Dialect
-
-cache.genre.time-to-live: 14400000
