refactoring and add roles

--- a/src/test/resources/datasets/movie/dataset_reviews.yml
+++ b/src/test/resources/datasets/movie/dataset_reviews.yml
@@ -1,12 +1,12 @@
 REVIEW:
   - id: 1
-    user_id: 1
+    movie_id: 1
     text: "review"
 
   - id: 2
-    user_id: 1
+    movie_id: 1
     text: "review2"
 
   - id: 3
-    user_id: 1
+    movie_id: 1
     text: "review3"
