--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
             <version>1.32.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>db-util</artifactId>
+            <version>1.0.7</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
